add new information

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,30 +7,30 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <title>United Kingdom’s Leading Golden Mister Game Portal</title>
+    <title>Ο Κορυφαίος Οδηγός για το BigClash Casino στην Ελλάδα</title>
     <meta name="description"
-        content="Discover everything about Golden Mister on tips, guides, strategies, and the latest updates for players across United Kingdom." />
+        content="Ανακαλύψτε τα πάντα για το BigClash Casino: συμβουλές, οδηγούς, στρατηγικές και τις τελευταίες ενημερώσεις για παίκτες σε όλη την Ελλάδα." />
 
-    <link rel="canonical" href="https://www.immaculatedetailing.co.uk/about-us/" />
+    <link rel="canonical" href="https://michailidisstathis.gr.pl/about-us/" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="United Kingdom’s Leading Golden Mister Game Portal" />
+    <meta name="twitter:title" content="Ο Κορυφαίος Οδηγός για το BigClash Casino στην Ελλάδα" />
     <meta name="twitter:description"
-        content="Discover everything about Golden Mister on tips, guides, strategies, and the latest updates for players across United Kingdom." />
+        content="Ανακαλύψτε τα πάντα για το BigClash Casino: συμβουλές, οδηγούς, στρατηγικές και τις τελευταίες ενημερώσεις για παίκτες σε όλη την Ελλάδα." />
 
-    <meta property="og:title" content="United Kingdom’s Leading Golden Mister Game Portal" />
+    <meta property="og:title" content="Ο Κορυφαίος Οδηγός για το BigClash Casino στην Ελλάδα" />
     <meta property="og:description"
-        content="Discover everything about Golden Mister on tips, guides, strategies, and the latest updates for players across United Kingdom." />
+        content="Ανακαλύψτε τα πάντα για το BigClash Casino: συμβουλές, οδηγούς, στρατηγικές και τις τελευταίες ενημερώσεις για παίκτες σε όλη την Ελλάδα." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.immaculatedetailing.co.uk/about-us/" />
+    <meta property="og:url" content="https://michailidisstathis.gr.pl/about-us/" />
 
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "WebPage",
-            "name": "About Us",
-            "description": "Information about the https://www.immaculatedetailing.co.uk/ portal and its mission.",
-            "url": "https://www.immaculatedetailing.co.uk/about-us/"
+            "name": "Σχετικά Με Εμάς",
+            "description": "Πληροφορίες σχετικά με τον οδηγό michailidisstathis.gr.pl και την αποστολή του.",
+            "url": "https://michailidisstathis.gr.pl/about-us/"
         }
     </script>
 </head>
@@ -38,12 +38,12 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/"><img src="/img/logo.webp" alt="Logotype of Casino Guide for United Kingdom" width="160"
+            <a href="/"><img src="/img/logo.webp" alt="Logotype του Casino Guide για την Ελλάδα" width="160"
                     height="80" /></a>
         </div>
         <div class="header-btn">
-            <a href="/play/" rel="nofollow" content="noindex" class="white-btn">Login</a>
-            <a href="/play/" rel="nofollow" content="noindex" class="green-btn">Register</a>
+            <a href="/play/" rel="nofollow" class="white-btn">Σύνδεση</a>
+            <a href="/play/" rel="nofollow" class="green-btn">Εγγραφή</a>
         </div>
     </header>
 
@@ -51,80 +51,124 @@
         <div class="wraper">
             <div class="promo">
                 <h1>
-                    Your Ultimate Guide to Golden Mister in United Kingdom
+                    Ο Οριστικός Οδηγός Σας για το BigClash Casino στην Ελλάδα
                 </h1>
                 <p class="txt">
-                    Welcome to <strong>https://www.immaculatedetailing.co.uk/</strong>, the premier digital destination for players across the United Kingdom seeking comprehensive, accurate, and insightful information about the <strong>Golden Mister</strong> gaming experience. We are not affiliated with the game's developer or operator; instead, we function as an independent, player-focused portal dedicated to building knowledge, strategy, and community around this popular title.
+                    Καλώς ήλθατε στο <strong>michailidisstathis.gr.pl</strong>, τον κορυφαίο ψηφιακό προορισμό για
+                    παίκτες σε όλη την Ελλάδα που αναζητούν περιεκτικές, ακριβείς και ενδελεχείς πληροφορίες για την
+                    εμπειρία του <strong>BigClash Casino</strong>. Δεν είμαστε συνδεδεμένοι με τον πάροχο του καζίνο·
+                    αντίθετα, λειτουργούμε ως ένας ανεξάρτητος, προσανατολισμένος στον παίκτη οδηγός, αφιερωμένος στη
+                    δημιουργία γνώσης, στρατηγικής και κοινότητας γύρω από αυτό το δημοφιλές online καζίνο.
                 </p>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Mission – Building a Strong Golden Mister Player Community</h2>
+                    <h2>Αποστολή – Χτίζοντας μια Δυνατή Κοινότητα Παικτών του BigClash</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Our core mission is to foster a well-informed and engaged <strong>Golden Mister</strong> player base in the <strong>United Kingdom</strong>. We believe that knowledge enhances gameplay, reduces frustration, and increases overall enjoyment. We achieve this by providing meticulously researched guides, up-to-date meta-analysis, and a platform for constructive discussion. Our goal is to be the first and most trusted resource for both newcomers learning the basics and veterans seeking to optimise their advanced strategies.
+                        Ο βασικός μας σκοπός είναι να καλλιεργήσουμε μια καλά ενημερωμένη και ενεργή βάση παικτών του
+                        <strong>BigClash Casino</strong> στην <strong>Ελλάδα</strong>. Πιστεύουμε ότι η γνώση ενισχύει
+                        την εμπειρία παιχνιδιού, μειώνει την απογοήτευση και αυξάνει τη συνολική απόλαυση. Το
+                        πετυχαίνουμε αυτό παρέχοντας προσεκτικά ερευνημένους οδηγούς, έγκαιρη ανάλυση, και μια πλατφόρμα
+                        για εποικοδομητική συζήτηση. Στόχος μας είναι να είμαστε ο πρώτος και πιο αξιόπιστος πόρος τόσο
+                        για νέους παίκτες που μαθαίνουν τα βασικά, όσο και για έμπειρους που επιδιώκουν να
+                        βελτιστοποιήσουν τις προχωρημένες στρατηγικές τους.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>How We Test Levels, Maps, and Game Modes</h2>
+                    <h2>Πώς Ελέγχουμε Μπόνους, Παιχνίδια και Χαρακτηριστικά</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Our analytical process is rigorous and systematic. For each new level, map, or game mode introduced in <strong>Golden Mister</strong>, our dedicated team of analysts engages in extensive playtesting. We document completion times, identify optimal routes and resource points, analyse enemy behaviour patterns, and evaluate balance and difficulty curves. This data-driven approach allows us to produce strategy guides that are not based on opinion, but on repeatable, observable in-game mechanics. We focus on providing actionable intelligence that players can directly apply to improve their performance.
+                        Η αναλυτική μας διαδικασία είναι αυστηρή και συστηματική. Για κάθε νέο μπόνους, παιχνίδι ή
+                        χαρακτηριστικό που εισάγεται στο <strong>BigClash Casino</strong>, η αφοσιωμένη ομάδα αναλυτών
+                        μας ασχολείται με εκτενή δοκιμή. Καταγράφουμε όρους και προϋποθέσεις, αναγνωρίζουμε βέλτιστες
+                        στρατηγικές για την εκπλήρωση απαιτήσεων στοιχηματισμού, αναλύουμε τα ποσοστά επιστροφής (RTP)
+                        των παιχνιδιών και αξιολογούμε την ποιότητα της ζωντανής πλατφόρμας. Αυτή η προσέγγιση βασισμένη
+                        σε δεδομένα μας επιτρέπει να παράγουμε οδηγούς στρατηγικής που δεν βασίζονται σε γνώμη, αλλά σε
+                        επαναλαμβανόμενους, παρατηρήσιμους μηχανισμούς. Εστιάζουμε στην παροχή εφαρμόσιμων πληροφοριών
+                        που οι παίκτες μπορούν να εφαρμόσουν άμεσα για να βελτιώσουν την απόδοσή τους.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Key Gameplay Features of Golden Mister</h2>
+                    <h2>Βασικά Χαρακτηριστικά του BigClash Casino</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        <strong>Golden Mister</strong> distinguishes itself through several core gameplay pillars that we cover in depth:
+                        Το <strong>BigClash Casino</strong> ξεχωρίζει μέσα από αρκετούς βασικούς πυλώνες παιχνιδιού που
+                        καλύπτουμε σε βάθος:
                     </p>
                     <ul>
-                        <li><strong>Progressive Level Design:</strong> We break down the escalating complexity of levels, highlighting checkpoint placement, hidden areas, and boss encounter mechanics.</li>
-                        <li><strong>Dynamic Map Systems:</strong> Our guides cover both static and evolving map environments, detailing strategic vantage points, objective locations, and environmental hazards.</li>
-                        <li><strong>Diverse Game Modes:</strong> From time-attack challenges to cooperative raids and competitive PvP formats, we provide tailored tactics and team composition advice for each mode.</li>
-                        <li><strong>Character & Equipment Synergy:</strong> We analyse the stats, abilities, and optimal gear loadouts for different playstyles and team roles.</li>
+                        <li><strong>Ποικιλία Παιχνιδιών:</strong> Αναλύουμε την εκτενή βιβλιοθήκη slots, ζωντανών καζίνο
+                            και τραπεζικών παιχνιδιών, επισημαίνοντας τα παιχνίδια με το υψηλότερο RTP και τις καλύτερες
+                            δυνατότητες.</li>
+                        <li><strong>Δομή Μπόνους & Προσφορών:</strong> Οι οδηγοί μας καλύπτουν το πακέτο υποδοχής, τα
+                            μπόνους χωρίς κατάθεση, τους κωδικούς <strong>bigclash casino promo code</strong> και τα
+                            προγράμματα πιστότητας, με λεπτομερή ανάλυση των όρων.</li>
+                        <li><strong>Mobile & Desktop Εμπειρία:</strong> Παρέχουμε κριτικές και συμβουλές για την απόδοση
+                            τόσο της εφαρμογής όσο και της ιστοσελίδας, με έμφαση στη χρηστικότητα και την ασφάλεια.
+                        </li>
+                        <li><strong>Μέθοδοι Πληρωμής & Υποστήριξη:</strong> Αξιολογούμε την ταχύτητα επεξεργασίας
+                            συναλλαγών, τα διαθέσιμα κανάλια επικοινωνίας και την ποιότητα της εξυπηρέτησης πελατών για
+                            το GR κοινό.</li>
                     </ul>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Our Review Approach – Honest, Insightful, and Player-Focused</h2>
+                    <h2>Η Προσέγγισή μας στις Κριτικές – Ειλικρινής, Διορατική και Προσανατολισμένη στον Παίκτη</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Integrity is the foundation of our content. Every guide, tip, and review published on <strong>https://www.immaculatedetailing.co.uk/</strong> is created with the player's interest as the sole priority. We maintain complete editorial independence. Our reviews are structured to answer the practical questions players have: Is this new update worth the grind? Does this weapon live up to its hype? How does this change affect the meta? We present clear pros and cons, supported by evidence from our testing, enabling our community to make informed decisions about how to invest their time and effort within the game.
+                        Η ακεραιότητα είναι το θεμέλιο του περιεχομένου μας. Κάθε οδηγός, συμβουλή και κριτική που
+                        δημοσιεύεται στο <strong>michailidisstathis.gr.pl</strong> δημιουργείται με το συμφέρον του
+                        παίκτη ως μοναδική προτεραιότητα. Διατηρούμε πλήρη συντάκτική ανεξαρτησία. Οι κριτικές μας
+                        δομούνται για να απαντούν στις πρακτικές ερωτήσεις που έχουν οι παίκτες: Αξίζει αυτή η νέα
+                        προσφορά; Είναι αυτό το παιχνίδι κερδοφόρο; Πώς επηρεάζει αυτή η αλλαγή τις πιθανότητές μου;
+                        Παρουσιάζουμε ξεκάθαρα τα υπέρ και τα κατά, υποστηριζόμενα από στοιχεία από τις δοκιμές μας,
+                        επιτρέποντας στην κοινότητά μας να λάβει ενημερωμένες αποφάσεις σχετικά με το πώς θα επενδύσουν
+                        το χρόνο και τα χρήματά τους.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Partnership and Support Opportunities with https://www.immaculatedetailing.co.uk/</h2>
+                    <h2>Ευκαιρίες Συνεργασίας και Υποστήριξης με το michailidisstathis.gr.pl</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        <strong>https://www.immaculatedetailing.co.uk/</strong> is committed to sustainable growth to better serve the <strong>Golden Mister</strong> community. We are open to discussions with reputable brands, content creators, and community leaders whose values align with our mission of education and integrity. Potential partnership areas include collaborative guide development, community event sponsorship, or resource sharing. For all partnership inquiries, please use the contact methods available on our website. Our primary focus remains on delivering unbiased, high-quality content to the players of the United Kingdom.
+                        Το <strong>michailidisstathis.gr.pl</strong> δεσμεύεται για βιώσιμη ανάπτυξη για να εξυπηρετήσει
+                        καλύτερα την κοινότητα του <strong>BigClash Casino</strong>. Είμαστε ανοιχτοί σε συζητήσεις με
+                        αξιόπιστες μάρκες, δημιουργούς περιεχομένου και ηγέτες της κοινότητας των οποίων οι αξίες
+                        ευθυγραμμίζονται με την αποστολή μας για εκπαίδευση και ακεραιότητα. Πιθανοί τομείς συνεργασίας
+                        περιλαμβάνουν τη συνεργατική ανάπτυξη οδηγών, χορηγία εκδηλώσεων κοινότητας ή κοινή χρήση πόρων.
+                        Για όλα τα ερωτήματα συνεργασίας, χρησιμοποιήστε τις μεθόδους επικοινωνίας που είναι διαθέσιμες
+                        στον ιστότοπό μας. Η κύρια εστίασή μας παραμένει η παροχή αμερόληπτων, υψηλής ποιότητας
+                        πληροφοριών στους παίκτες της Ελλάδας.
                     </p>
                     <p class="txt">
-                        Thank you for being part of our community. Together, we aim to elevate the <strong>Golden Mister</strong> experience for every player in the UK.
+                        Σας ευχαριστούμε που είστε μέρος της κοινότητάς μας. Μαζί, στοχεύουμε να ανυψώσουμε την εμπειρία
+                        του <strong>BigClash Casino</strong> για κάθε παίκτη στην Ελλάδα.
                     </p>
                 </div>
             </div>
 
             <div class="promo">
                 <p class="txt">
-                    This portal is independently operated and is not an official <strong>Golden Mister</strong> website. All referenced game content is the property of its respective owners. Game imagery and logos are used under fair use for the purpose of review and commentary.
+                    Αυτός ο οδηγός λειτουργεί ανεξάρτητα και δεν είναι επίσημος ιστότοπος του <strong>BigClash
+                        Casino</strong>. Όλο το περιεχόμενο του παιχνιδιού που αναφέρεται είναι ιδιοκτησία των
+                    αντίστοιχων κατόχων του. Οι εικόνες και τα λογότυπα του παιχνιδιού χρησιμοποιούνται σύμφωνα με την
+                    αρχή της δίκαιης χρήσης για σκοπούς κριτικής και σχολιασμού.
                 </p>
             </div>
         </div>
@@ -132,11 +176,11 @@
 
     <footer>
         <div class="flex">
-            <a href="/about-us/">About Us</a>
-            <a href="/cookie-policy/">Cookie Policy</a>
-            <a href="/privacy-policy/">Privacy Policy</a>
-            <a href="/responsible-gambling/">Responsible Gambling</a>
-            <a href="/terms-and-conditions/">Terms & Conditions</a>
+            <a href="/about-us/">Σχετικά Με Εμάς</a>
+            <a href="/cookie-policy/">Πολιτική Cookies</a>
+            <a href="/privacy-policy/">Πολιτική Απορρήτου</a>
+            <a href="/responsible-gambling/">Υπεύθυνο Παιχνίδι</a>
+            <a href="/terms-and-conditions/">Όροι & Προϋποθέσεις</a>
         </div>
     </footer>
 </body>
