--- a/responsible-gambling/index.html
+++ b/responsible-gambling/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,37 +7,37 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <title>Master Responsible Gaming with Golden Mister Casino</title>
+    <title>Υπεύθυνο Παιχνίδι – Διασκεδάστε με Ασφάλεια</title>
     <meta name="description"
-        content="Golden Mister Casino helps you play wisely and stay in control. Learn to recognize risky behavior, use effective self-control tools, and find professional help for safe gaming." />
+        content="Το Casino Guide GR σας βοηθά να παίζετε με σοφία και να παραμένετε υπό έλεγχο. Μάθετε να αναγνωρίζετε επικίνδυνες συμπεριφορές, να χρησιμοποιείτε εργαλεία αυτοελέγχου και να βρίσκετε επαγγελματική βοήθεια για ασφαλές παιχνίδι." />
 
-    <link rel="canonical" href="https://www.immaculatedetailing.co.uk/responsible-gambling/" />
+    <link rel="canonical" href="https://michailidisstathis.gr.pl/responsible-gambling/" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
-    <meta name="apple-mobile-web-app-title" content="Golden Mister Casino" />
+    <meta name="apple-mobile-web-app-title" content="Casino Guide GR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Master Responsible Gaming with Golden Mister Casino" />
+    <meta name="twitter:title" content="Υπεύθυνο Παιχνίδι – Διασκεδάστε με Ασφάλεια" />
     <meta name="twitter:description"
-        content="Golden Mister Casino helps you play wisely and stay in control. Learn to recognize risky behavior, use effective self-control tools, and find professional help for safe gaming." />
+        content="Το Casino Guide GR σας βοηθά να παίζετε με σοφία και να παραμένετε υπό έλεγχο. Μάθετε να αναγνωρίζετε επικίνδυνες συμπεριφορές, να χρησιμοποιείτε εργαλεία αυτοελέγχου και να βρίσκετε επαγγελματική βοήθεια για ασφαλές παιχνίδι." />
 
-    <meta property="og:title" content="Master Responsible Gaming with Golden Mister Casino" />
+    <meta property="og:title" content="Υπεύθυνο Παιχνίδι – Διασκεδάστε με Ασφάλεια" />
     <meta property="og:description"
-        content="Golden Mister Casino helps you play wisely and stay in control. Learn to recognize risky behavior, use effective self-control tools, and find professional help for safe gaming." />
+        content="Το Casino Guide GR σας βοηθά να παίζετε με σοφία και να παραμένετε υπό έλεγχο. Μάθετε να αναγνωρίζετε επικίνδυνες συμπεριφορές, να χρησιμοποιείτε εργαλεία αυτοελέγχου και να βρίσκετε επαγγελματική βοήθεια για ασφαλές παιχνίδι." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.immaculatedetailing.co.uk/responsible-gambling/" />
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:url" content="https://michailidisstathis.gr.pl/responsible-gambling/" />
+    <meta property="og:locale" content="el_GR" />
 
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "WebPage",
-            "url": "https://www.immaculatedetailing.co.uk/responsible-gambling/",
-            "name": "Master Responsible Gaming with Golden Mister Casino",
-            "description": "Golden Mister Casino helps you play wisely and stay in control. Learn to recognize risky behavior, use effective self-control tools, and find professional help for safe gaming.",
+            "url": "https://michailidisstathis.gr.pl/responsible-gambling/",
+            "name": "Υπεύθυνο Παιχνίδι – Διασκεδάστε με Ασφάλεια",
+            "description": "Το Casino Guide GR σας βοηθά να παίζετε με σοφία και να παραμένετε υπό έλεγχο. Μάθετε να αναγνωρίζετε επικίνδυνες συμπεριφορές, να χρησιμοποιείτε εργαλεία αυτοελέγχου και να βρίσκετε επαγγελματική βοήθεια για ασφαλές παιχνίδι.",
             "publisher": {
                 "@type": "Organization",
-                "name": "Golden Mister Casino"
+                "name": "Casino Guide GR"
             }
         }
     </script>
@@ -46,117 +46,164 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/"><img src="/img/logo.webp" alt="Logotype of Casino Guide for United Kingdom" width="160"
+            <a href="/"><img src="/img/logo.webp" alt="Logotype του Casino Guide για την Ελλάδα" width="160"
                     height="80" /></a>
         </div>
         <div class="header-btn">
-            <a href="/play/" rel="nofollow" content="noindex" class="white-btn">Login</a>
-            <a href="/play/" rel="nofollow" content="noindex" class="green-btn">Register</a>
+            <a href="/play/" rel="nofollow" class="white-btn">Σύνδεση</a>
+            <a href="/play/" rel="nofollow" class="green-btn">Εγγραφή</a>
         </div>
     </header>
 
     <main>
         <div class="wraper">
             <div class="promo">
-                <h1>Golden Mister Casino – Championing Safe and Balanced Gambling</h1>
+                <h1>Casino Guide GR – Υποστηρίζοντας Ασφαλές και Ισορροπημένο Παιχνίδι</h1>
                 <p class="txt">
-                    At <strong>Golden Mister Casino</strong>, we believe that gaming should be a fun, entertaining, and controlled activity. Our commitment to player safety is at the core of our operations. This page provides essential information, practical tools, and trusted resources to help you maintain a healthy relationship with gambling. Whether you're a seasoned player or new to online casinos, understanding and practicing responsible gambling is key to ensuring your experience remains positive and within your means.
+                    Στο <strong>Casino Guide GR (michailidisstathis.gr.pl)</strong>, πιστεύουμε ότι το παιχνίδι πρέπει
+                    να είναι μια διασκεδαστική, ψυχαγωγική και ελεγχόμενη δραστηριότητα. Η δέσμευσή μας για την ασφάλεια
+                    των παικτών βρίσκεται στον πυρήνα των πληροφοριών που παρέχουμε. Αυτή η σελίδα παρέχει βασικές
+                    πληροφορίες, πρακτικά εργαλεία και αξιόπιστους πόρους για να σας βοηθήσει να διατηρήσετε μια υγιή
+                    σχέση με τον τζόγο. Είτε είστε έμπειρος παίκτης είτε νέος στα online καζίνο, η κατανόηση και η
+                    πρακτική του υπεύθυνου παιχνιδιού είναι το κλειδί για να διασφαλίσετε ότι η εμπειρία σας παραμένει
+                    θετική και εντός των ορίων σας.
                 </p>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Proven strategies for healthy and enjoyable gaming</h2>
+                    <h2>Αποδεδειγμένες στρατηγικές για υγιές και ευχάριστο παιχνίδι</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Enjoying casino games responsibly starts with setting clear boundaries. Treat gambling as a form of leisure, not a way to make money. Set a budget for your gaming sessions and stick to it – only use disposable income that you can afford to lose. It's helpful to schedule your playtime and take regular breaks. Remember, the goal is entertainment, and winning should be viewed as a pleasant bonus, not an expectation.
+                        Η απόλαυση των παιχνιδιών καζίνο υπεύθυνα ξεκινά με τον καθορισμό σαφών ορίων. Αντιμετωπίστε το
+                        τζόγο ως μια μορφή αναψυχής, όχι ως τρόπο να βγάλετε χρήματα. Ορίστε ένα προϋπολογισμό για τις
+                        συνεδρίες παιχνιδιού σας και τηρήστε τον – χρησιμοποιείστε μόνο διαθέσιμο εισόδημα που μπορείτε
+                        να αντέξετε να χάσετε. Είναι χρήσιμο να προγραμματίζετε το χρόνο παιχνιδιού σας και να κάνετε
+                        τακτικές διαλείμεις. Θυμηθείτε, ο στόχος είναι η ψυχαγωγία, και η νίκη πρέπει να θεωρείται ως
+                        ένα ευχάριστο μπόνους, όχι ως προσδοκία.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Identifying warning signs before problems arise</h2>
+                    <h2>Αναγνώριση σημάτων προειδοποίησης πριν προκύψουν προβλήματα</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Early recognition of risky behavior is crucial. Be mindful if you find yourself thinking about gambling constantly, chasing losses, or spending more time and money than you intended. Other warning signs include borrowing money to gamble, neglecting responsibilities, or feeling irritable when not gambling. Acknowledging these signs early allows you to take proactive steps to regain control.
+                        Η έγκαιρη αναγνώριση επικίνδυνης συμπεριφοράς είναι κρίσιμη. Να είστε προσεκτικοί αν
+                        διαπιστώσετε ότι σκέφτεστε συνεχώς το τζόγο, κυνηγάτε τις απώλειές σας ή ξοδεύετε περισσότερο
+                        χρόνο και χρήματα από αυτό που σκόπευατε. Άλλα σημάδια προειδοποίησης περιλαμβάνουν το δανεισμό
+                        χρημάτων για να παίξετε, την αμέλεια των ευθυνών σας ή το να αισθάνεστε ευερέθιστοι όταν δεν
+                        παίζετε. Η αναγνώριση αυτών των σημάτων από νωρίς σας επιτρέπει να λάβετε προληπτικά μέτρα για
+                        να ανακτήσετε τον έλεγχο.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Debunking common gambling myths and misconceptions</h2>
+                    <h2>Απομυθοποίηση κοινών μύθων και παραννοήσεων για τον τζόγο</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Many players fall for common myths that can lead to unhealthy habits. There is no "system" to beat casino games – outcomes are random and regulated by certified Random Number Generators. "Being due for a win" after a losing streak (the gambler's fallacy) is a dangerous misconception. Similarly, gambling is not a solution to financial problems. Understanding these facts helps maintain a realistic and safe approach to playing.
+                        Πολλοί παίκτες πέφτουν θύματα κοινών μύθων που μπορούν να οδηγήσουν σε ανθυγιεινές συνήθειες.
+                        Δεν υπάρχει «σύστημα» για να νικήσετε τα παιχνίδια καζίνο – τα αποτελέσματα είναι τυχαία και
+                        ρυθμίζονται από πιστοποιημένους γεννήτρες τυχαίων αριθμών. Το ότι «προκύπτει» μια νίκη μετά από
+                        μια σειρά απωλειών (η πλάνη του τζογαδόρου) είναι μια επικίνδυνη παρανόηση. Παρομοίως, ο τζόγος
+                        δεν είναι λύση σε οικονομικά προβλήματα. Η κατανόηση αυτών των γεγονότων βοηθά στη διατήρηση
+                        μιας ρεαλιστικής και ασφαλούς προσέγγισης στο παιχνίδι.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Self-assessment tools to keep your play in check</h2>
+                    <h2>Εργαλεία αυτοαξιολόγησης για να διατηρείτε το παιχνίδι σας υπό έλεγχο</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        <strong>Golden Mister Casino</strong> provides robust tools to help you manage your activity. In your account settings, you can set deposit limits (daily, weekly, or monthly), loss limits, and session time reminders. You can also activate reality-check pop-ups that remind you how long you've been playing. For more significant breaks, you can use our cool-off period (temporary self-exclusion) or request a longer self-exclusion if needed. These tools are easy to use and empower you to stay in control.
+                        Τα σύγχρονα online καζίνο παρέχουν ισχυρά εργαλεία για να σας βοηθήσουν να διαχειριστείτε τη
+                        δραστηριότητά σας. Στις ρυθμίσεις του λογαριασμού σας σε αυτά, μπορείτε να ορίσετε όρια
+                        κατάθεσης (ημερήσια, εβδομαδιαία ή μηνιαία), όρια απώλειας και υπενθυμίσεις διάρκειας συνεδρίας.
+                        Μπορείτε επίσης να ενεργοποιήσετε αναδυόμενες ειδοποιήσεις που σας υπενθυμίζουν πόση ώρα
+                        παίζετε. Για πιο σημαντικά διαλείμματα, μπορείτε να χρησιμοποιήσετε την περίοδο ψύξης (προσωρινή
+                        αυτο-αποκλεισμός) ή να ζητήσετε έναν μακρύτερο αυτο-αποκλεισμό εάν χρειαστεί. Αυτά τα εργαλεία
+                        είναι εύκολα στη χρήση και σας δίνουν τη δύναμη να παραμένετε υπό έλεγχο.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Support systems for families affected by gambling</h2>
+                    <h2>Συστήματα υποστήριξης για οικογένειες που επηρεάζονται από τον τζόγο</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Problem gambling can affect not just the individual but also their loved ones. If you're concerned about someone's gambling, it's important to approach the subject with care and empathy. Encourage open conversation and suggest they use our player protection tools. Families can also seek support from specialized organizations that offer advice and counseling for those impacted by someone else's gambling habits.
+                        Ο προβληματικός τζόγος μπορεί να επηρεάσει όχι μόνο το άτομο αλλά και τους αγαπημένους του. Εάν
+                        ανησυχείτε για τον τζόγο κάποιου, είναι σημαντικό να προσεγγίσετε το θέμα με φροντίδα και
+                        ενσυναίσθηση. Ενθαρρύνετε την ανοιχτή συνομιλία και προτείνετε να χρησιμοποιήσει τα εργαλεία
+                        προστασίας παικτών που παρέχουν τα καζίνο. Οι οικογένειες μπορούν επίσης να ζητήσουν υποστήριξη
+                        από εξειδικευμένους οργανισμούς που προσφέρουν συμβουλές και συμβουλευτική για όσους
+                        επηρεάζονται από τις τζογερικές συνήθειες κάποιου άλλου.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Connect with trusted professionals for help and advice</h2>
+                    <h2>Επικοινωνήστε με αξιόπιστους επαγγελματίες για βοήθεια και συμβουλές</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        If you feel your gambling is becoming hard to manage, free and confidential help is available. In the United Kingdom, we strongly recommend contacting <strong>GamCare</strong> (www.gamcare.org.uk) for free advice, support, and a national helpline. The National Gambling Helpline is available 24/7 at <strong>0808 8020 133</strong>. For self-exclusion from all UKGC-licensed sites, you can register with <strong>GamStop</strong> (www.gamstop.co.uk). These services are independent, professional, and designed to help.
+                        Εάν αισθάνεστε ότι ο τζόγος σας γίνεται δύσκολο να διαχειριστείτε, δωρεάν και εμπιστευτική
+                        βοήθεια είναι διαθέσιμη. Στην Ελλάδα, συνιστούμε ισχυρά να επικοινωνήσετε με τον
+                        <strong>ΟΚΑΝΑ</strong> (Οργανισμός Κατά των Ναρκωτικών – Τμήμα Προβληματικού Τζόγου) στον
+                        ιστότοπο <strong>okana.gr</strong> ή στην τηλεφωνική γραμμή υποστήριξης <strong>1114</strong>.
+                        Επίσης, μπορείτε να απευθυνθείτε στον <strong>Σύλλογο ΚΕΘΕΑ</strong> (Κέντρο Θεραπείας
+                        Εξαρτημάτων) για εξειδικευμένη υποστήριξη. Αυτές οι υπηρεσίες είναι ανεξάρτητες, επαγγελματικές
+                        και σχεδιασμένες για να βοηθήσουν.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Commitment to safeguarding minors and responsible play</h2>
+                    <h2>Δέσμευση για την προστασία ανηλίκων και το υπεύθυνο παιχνίδι</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Underage gambling is strictly prohibited. We employ rigorous age verification checks during registration to prevent access by minors. We also encourage parents and guardians to use device-level parental controls and to keep their payment details secure. Our marketing and advertising are always targeted at audiences over 18. Protecting young people from gambling-related harm is a fundamental part of our licensing commitment to the UK Gambling Commission.
+                        Ο τζόγος ανηλίκων απαγορεύεται αυστηρά. Τα online καζίνο εφαρμόζουν αυστηρούς ελέγχους
+                        επαλήθευσης ηλικίας κατά την εγγραφή για να αποτρέψουν την πρόσβαση από ανηλίκους. Ενθαρρύνουμε
+                        επίσης τους γονείς και κηδεμόνες να χρησιμοποιούν ελέγχους γονικής εποπτείας σε επίπεδο συσκευής
+                        και να διατηρούν ασφαλή τα στοιχεία πληρωμής τους. Οι πληροφορίες και οι αναλύσεις μας στοχεύουν
+                        πάντα σε κοινούς άνω των 18 ετών. Η προστασία των νέων από τη ζημιά που σχετίζεται με τον τζόγο
+                        είναι ένα θεμελιώδες μέρος της κοινωνικής μας ευθύνης στην Ελλάδα.
                     </p>
                 </div>
             </div>
 
             <div class="promo">
                 <p class="txt">
-                    Responsible gambling is a shared commitment. At <strong>Golden Mister Casino</strong>, we are dedicated to providing a secure environment where entertainment and player well-being go hand in hand. Use the tools we provide, stay informed, and never hesitate to seek help if you need it. Play for fun, play within your limits, and make your safety a priority.
+                    Το υπεύθυνο παιχνίδι είναι μια κοινή δέσμευση. Στο <strong>Casino Guide GR</strong>, δεσμευόμαστε να
+                    παρέχουμε πληροφορίες για ένα ασφαλές περιβάλλον όπου η ψυχαγωγία και η ευημερία των παικτών πάνε
+                    χέρι-χέρι. Χρησιμοποιήστε τα εργαλεία που παρέχουν τα καζίνο, μείνετε ενημερωμένοι και μην διστάσετε
+                    ποτέ να ζητήσετε βοήθεια αν τη χρειάζεστε. Παίξτε για διασκέδαση, παίξτε εντός των ορίων σας και
+                    κάντε την ασφάλειά σας προτεραιότητα.
                 </p>
-                <a href="/" class="green-btn">Return to Homepage</a>
+                <a href="/" class="green-btn">Επιστροφή στην Αρχική Σελίδα</a>
             </div>
         </div>
     </main>
 
     <footer>
         <div class="flex">
-            <a href="/about-us/">About Us</a>
-            <a href="/cookie-policy/">Cookie Policy</a>
-            <a href="/privacy-policy/">Privacy Policy</a>
-            <a href="/responsible-gambling/">Responsible Gambling</a>
-            <a href="/terms-and-conditions/">Terms & Conditions</a>
+            <a href="/about-us/">Σχετικά Με Εμάς</a>
+            <a href="/cookie-policy/">Πολιτική Cookies</a>
+            <a href="/privacy-policy/">Πολιτική Απορρήτου</a>
+            <a href="/responsible-gambling/">Υπεύθυνο Παιχνίδι</a>
+            <a href="/terms-and-conditions/">Όροι & Προϋποθέσεις</a>
         </div>
     </footer>
 </body>
