--- a/cookie-policy/index.html
+++ b/cookie-policy/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,37 +7,37 @@
     <link rel="stylesheet" href="/style.css" />
     <link rel="shortcut icon" href="/favicon.ico" />
 
-    <title>Golden Mister Casino – Your Privacy is Our Priority</title>
+    <title>Πολιτική Cookies – Το Απόρρητό Σας είναι Προτεραιότητά μας</title>
     <meta name="description"
-        content="At Golden Mister Casino, we are committed to protecting your data. Learn how cookies enhance your experience while keeping your personal information safe with full transparency." />
+        content="Στο Casino Guide GR, δεσμευόμαστε για την προστασία των δεδομένων σας. Μάθετε πώς τα cookies βελτιώνουν την εμπειρία σας διατηρώντας τα προσωπικά σας στοιχεία ασφαλή με πλήρη διαφάνεια." />
 
-    <link rel="canonical" href="https://www.immaculatedetailing.co.uk/cookie-policy/" />
+    <link rel="canonical" href="https://michailidisstathis.gr.pl/cookie-policy/" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
-    <meta name="apple-mobile-web-app-title" content="Golden Mister Casino" />
+    <meta name="apple-mobile-web-app-title" content="Casino Guide GR" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Golden Mister Casino – Your Privacy is Our Priority" />
+    <meta name="twitter:title" content="Πολιτική Cookies – Το Απόρρητό Σας είναι Προτεραιότητά μας" />
     <meta name="twitter:description"
-        content="At Golden Mister Casino, we are committed to protecting your data. Learn how cookies enhance your experience while keeping your personal information safe with full transparency." />
+        content="Στο Casino Guide GR, δεσμευόμαστε για την προστασία των δεδομένων σας. Μάθετε πώς τα cookies βελτιώνουν την εμπειρία σας διατηρώντας τα προσωπικά σας στοιχεία ασφαλή με πλήρη διαφάνεια." />
 
-    <meta property="og:title" content="Golden Mister Casino – Your Privacy is Our Priority" />
+    <meta property="og:title" content="Πολιτική Cookies – Το Απόρρητό Σας είναι Προτεραιότητά μας" />
     <meta property="og:description"
-        content="At Golden Mister Casino, we are committed to protecting your data. Learn how cookies enhance your experience while keeping your personal information safe with full transparency." />
+        content="Στο Casino Guide GR, δεσμευόμαστε για την προστασία των δεδομένων σας. Μάθετε πώς τα cookies βελτιώνουν την εμπειρία σας διατηρώντας τα προσωπικά σας στοιχεία ασφαλή με πλήρη διαφάνεια." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.immaculatedetailing.co.uk/cookie-policy/" />
-    <meta property="og:locale" content="en_GB" />
+    <meta property="og:url" content="https://michailidisstathis.gr.pl/cookie-policy/" />
+    <meta property="og:locale" content="el_GR" />
 
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "WebPage",
-            "url": "https://www.immaculatedetailing.co.uk/cookie-policy/",
-            "name": "Golden Mister Casino Cookie Policy",
-            "description": "At Golden Mister Casino, we are committed to protecting your data. Learn how cookies enhance your experience while keeping your personal information safe with full transparency.",
+            "url": "https://michailidisstathis.gr.pl/cookie-policy/",
+            "name": "Πολιτική Cookies του Casino Guide GR",
+            "description": "Στο Casino Guide GR, δεσμευόμαστε για την προστασία των δεδομένων σας. Μάθετε πώς τα cookies βελτιώνουν την εμπειρία σας διατηρώντας τα προσωπικά σας στοιχεία ασφαλή με πλήρη διαφάνεια.",
             "publisher": {
                 "@type": "Organization",
-                "name": "Golden Mister Casino"
+                "name": "Casino Guide GR"
             }
         }
     </script>
@@ -46,95 +46,134 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/"><img src="/img/logo.webp" alt="Logotype of Casino Guide for United Kingdom" width="160"
+            <a href="/"><img src="/img/logo.webp" alt="Logotype του Casino Guide για την Ελλάδα" width="160"
                     height="80" /></a>
         </div>
         <div class="header-btn">
-            <a href="/play/" rel="nofollow" content="noindex" class="white-btn">Login</a>
-            <a href="/play/" rel="nofollow" content="noindex" class="green-btn">Register</a>
+            <a href="/play/" rel="nofollow" class="white-btn">Σύνδεση</a>
+            <a href="/play/" rel="nofollow" class="green-btn">Εγγραφή</a>
         </div>
     </header>
 
     <main>
         <div class="wraper">
             <div class="promo">
-                <h1>Golden Mister Casino Cookie Policy – Designed with You in Mind</h1>
+                <h1>Πολιτική Cookies – Σχεδιασμένη με Εσάς στο Μυαλό</h1>
                 <p class="txt">
-                    This Cookie Policy explains how <strong>Golden Mister Casino</strong> uses cookies and similar technologies to enhance your browsing and gaming experience. We are dedicated to transparency and giving you control over your data. By using our website, you consent to the use of cookies in accordance with this policy. Your privacy and trust are of utmost importance to us.
+                    Η παρούσα Πολιτική Cookies εξηγεί πώς το <strong>Casino Guide GR (michailidisstathis.gr.pl)</strong>
+                    χρησιμοποιεί cookies και παρόμοιες τεχνολογίες για να βελτιώσει την εμπειρία περιήγησης και
+                    πληροφόρησής σας. Δεσμευόμαστε για διαφάνεια και για να σας δώσουμε τον έλεγχο των δεδομένων σας. Με
+                    τη χρήση του ιστότοπού μας, συναινείτε στη χρήση των cookies σύμφωνα με την παρούσα πολιτική. Το
+                    απόρρητο και η εμπιστοσύνη σας είναι υψίστης σημασίας για εμάς.
                 </p>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Unlocking better experiences: How cookies work on Golden Mister Casino</h2>
+                    <h2>Ξεκλειδώνοντας καλύτερες εμπειρίες: Πώς λειτουργούν τα cookies στο Casino Guide GR</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        Cookies are small text files stored on your device when you visit our website. They help us remember your preferences, understand how you interact with our platform, and improve site performance. For example, cookies allow us to keep you logged in during your session, remember your language and currency settings, and ensure that promotional offers are displayed correctly. Without cookies, many features of our site would not function smoothly.
+                        Τα cookies είναι μικρά αρχεία κειμένου που αποθηκεύονται στη συσκευή σας όταν επισκέπτεστε τον
+                        ιστότοπό μας. Μας βοηθούν να θυμόμαστε τις προτιμήσεις σας, να κατανοούμε πώς αλληλεπιδράτε με
+                        την πλατφόρμα μας και να βελτιώνουμε την απόδοση του ιστότοπου. Για παράδειγμα, τα cookies μας
+                        επιτρέπουν να παραμένετε συνδεδεμένοι κατά τη διάρκεια της συνεδρίας σας, να θυμόμαστε τις
+                        ρυθμίσεις γλώσσας και νομίσματος σας και να διασφαλίζουμε ότι οι προωθητικές προσφορές
+                        εμφανίζονται σωστά. Χωρίς cookies, πολλά χαρακτηριστικά του ιστότοπού μας δεν θα λειτουργούσαν
+                        ομαλά.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Data we collect and our strict commitment to responsible use</h2>
+                    <h2>Δεδομένα που συλλέγουμε και η αυστηρή μας δέσμευση για υπεύθυνη χρήση</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        The information collected via cookies is primarily technical and behavioural. This may include your IP address, browser type, device information, pages visited, time spent on the site, and interaction with games and promotions. We use this data exclusively to optimize our website, analyse trends, and personalise your experience—never to identify you personally without your consent. All data handling complies with the UK Data Protection Act 2018 and the General Data Protection Regulation (GDPR).
+                        Οι πληροφορίες που συλλέγονται μέσω cookies είναι πρωτίστως τεχνικές και σχετικές με τη
+                        συμπεριφορά. Αυτό μπορεί να περιλαμβάνει τη διεύθυνση IP σας, τον τύπο του προγράμματος
+                        περιήγησης, πληροφορίες συσκευής, τις σελίδες που επισκεφτήκατε, το χρόνο που περάσατε στον
+                        ιστότοπο και την αλληλεπίδραση με περιεχόμενο και προωθήσεις. Χρησιμοποιούμε αυτά τα δεδομένα
+                        αποκλειστικά για να βελτιστοποιήσουμε τον ιστότοπό μας, να αναλύσουμε τάσεις και να
+                        εξατομικεύσουμε την εμπειρία σας – ποτέ για να σας αναγνωρίσουμε προσωπικά χωρίς τη συγκατάθεσή
+                        σας. Όλη η διαχείριση δεδομένων συμμορφώνεται με τον Γενικό Κανονισμό Προστασίας Δεδομένων
+                        (GDPR).
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Third-party services: Ensuring safe and transparent tracking</h2>
+                    <h2>Υπηρεσίες τρίτων: Διασφαλίζοντας ασφαλή και διαφανή παρακολούθηση</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        We work with trusted third-party partners who may place cookies on our site to provide services such as analytics, advertising, and payment processing. For instance, Google Analytics helps us understand user behaviour, while payment providers like PayPal use cookies to secure transactions. These partners are bound by strict confidentiality agreements and are prohibited from using your data for purposes other than those specified by us. We regularly review our third-party collaborations to ensure they align with our privacy standards.
+                        Συνεργαζόμαστε με αξιόπιστους συνεργάτες τρίτων που ενδέχεται να τοποθετούν cookies στον
+                        ιστότοπό μας για να παρέχουν υπηρεσίες όπως αναλυτικά στοιχεία, διαφήμιση και επεξεργασία
+                        πληρωμών. Για παράδειγμα, το Google Analytics μας βοηθά να κατανοούμε τη συμπεριφορά των
+                        χρηστών, ενώ πάροχοι πληρωμών χρησιμοποιούν cookies για την ασφάλεια των συναλλαγών. Αυτοί οι
+                        συνεργάτες δεσμεύονται από αυστηρές συμφωνίες εμπιστευτικότητας και απαγορεύεται να
+                        χρησιμοποιούν τα δεδομένα σας για σκοπούς διαφορετικούς από αυτούς που καθορίζουμε εμείς.
+                        Ελέγχουμε τακτικά τις συνεργασίες μας με τρίτους για να διασφαλίσουμε ότι ευθυγραμμίζονται με τα
+                        πρότυπα απορρήτου μας.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Take control: How to customize your cookie preferences easily</h2>
+                    <h2>Αναλάβετε τον έλεγχο: Πώς να προσαρμόσετε εύκολα τις προτιμήσεις cookies σας</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        You have full control over cookie settings. Upon your first visit, you will be presented with a cookie consent banner where you can accept all, reject non-essential cookies, or customise your preferences. You can also manage cookies through your browser settings—most browsers allow you to block or delete cookies. Please note that disabling certain cookies may affect the functionality of the website, such as the ability to stay logged in or access personalised content.
+                        Έχετε πλήρη έλεγχο στις ρυθμίσεις cookies. Κατά την πρώτη σας επίσκεψη, θα σας παρουσιαστεί ένα
+                        banner συγκατάθεσης για cookies όπου μπορείτε να αποδεχτείτε όλα, να απορρίψετε τα μη απαραίτητα
+                        cookies ή να προσαρμόσετε τις προτιμήσεις σας. Μπορείτε επίσης να διαχειριστείτε τα cookies μέσω
+                        των ρυθμίσεων του προγράμματος περιήγησής σας – τα περισσότερα προγράμματα περιήγησης σας
+                        επιτρέπουν να αποκλείσετε ή να διαγράψετε cookies. Λάβετε υπόψη ότι η απενεργοποίηση ορισμένων
+                        cookies μπορεί να επηρεάσει τη λειτουργικότητα του ιστότοπου, όπως η δυνατότητα παραμονής
+                        συνδεδεμένου ή η πρόσβαση σε εξατομικευμένο περιεχόμενο.
                     </p>
                 </div>
             </div>
 
             <div class="flex">
                 <div class="flex-content">
-                    <h2>Always informed: Updates to our policy and how to reach us</h2>
+                    <h2>Πάντα ενημερωμένοι: Ενημερώσεις στην πολιτική μας και πώς να μας επικοινωνήσετε</h2>
                 </div>
                 <div class="flex-content">
                     <p class="txt">
-                        We may update this Cookie Policy periodically to reflect changes in technology, regulation, or our services. The latest version will always be available on this page with the effective date clearly indicated. We encourage you to review it occasionally. If you have any questions or concerns about our use of cookies or your data privacy, please contact our Data Protection Officer via the support section of our website. We are here to ensure your experience with <strong>Golden Mister Casino</strong> is both enjoyable and secure.
+                        Ενδέχεται να ενημερώνουμε περιοδικά αυτήν την Πολιτική Cookies για να αντανακλά αλλαγές στην
+                        τεχνολογία, τη νομοθεσία ή τις υπηρεσίες μας. Η πιο πρόσφατη έκδοση θα είναι πάντα διαθέσιμη σε
+                        αυτήν τη σελίδα με την ημερομηνία ισχύος να αναγράφεται σαφώς. Σας ενθαρρύνουμε να την
+                        αναθεωρείτε περιστασιακά. Εάν έχετε οποιεσδήποτε ερωτήσεις ή ανησυχίες σχετικά με τη χρήση των
+                        cookies από εμάς ή την ιδιωτικότητα των δεδομένων σας, επικοινωνήστε με τον Υπεύθυνο Προστασίας
+                        Δεδομένων μας μέσω της ενότητας υποστήριξης του ιστότοπού μας. Είμαστε εδώ για να διασφαλίσουμε
+                        ότι η εμπειρία σας με τον <strong>Casino Guide GR</strong> είναι τόσο ευχάριστη όσο και ασφαλής.
                     </p>
                 </div>
             </div>
 
             <div class="promo">
                 <p class="txt">
-                    By using <strong>Golden Mister Casino</strong>, you acknowledge and agree to our use of cookies as described in this policy. We are committed to maintaining the highest standards of data protection and transparency for all our players in the United Kingdom.
+                    Με τη χρήση του <strong>michailidisstathis.gr.pl (Casino Guide GR)</strong>, αναγνωρίζετε και
+                    συμφωνείτε στη χρήση των cookies από εμάς όπως περιγράφεται στην παρούσα πολιτική. Δεσμευόμαστε να
+                    διατηρούμε τα υψηλότερα πρότυπα προστασίας δεδομένων και διαφάνειας για όλους τους επισκέπτες μας
+                    στην Ελλάδα.
                 </p>
-                <a href="/" class="green-btn">Return to Homepage</a>
+                <a href="/" class="green-btn">Επιστροφή στην Αρχική Σελίδα</a>
             </div>
         </div>
     </main>
 
     <footer>
         <div class="flex">
-            <a href="/about-us/">About Us</a>
-            <a href="/cookie-policy/">Cookie Policy</a>
-            <a href="/privacy-policy/">Privacy Policy</a>
-            <a href="/responsible-gambling/">Responsible Gambling</a>
-            <a href="/terms-and-conditions/">Terms & Conditions</a>
+            <a href="/about-us/">Σχετικά Με Εμάς</a>
+            <a href="/cookie-policy/">Πολιτική Cookies</a>
+            <a href="/privacy-policy/">Πολιτική Απορρήτου</a>
+            <a href="/responsible-gambling/">Υπεύθυνο Παιχνίδι</a>
+            <a href="/terms-and-conditions/">Όροι & Προϋποθέσεις</a>
         </div>
     </footer>
 </body>
